# epub-parser

./: .gitignore  README.md  pyproject.toml
epub_font_parser/: __init__.py  __main__.py  cli.py  css.py  models.py  normalization.py  parser.py  tei.py
scripts/: convert_epubs_to_txt.py  convert_epubs_to_xml.py
tests/: test_parser.py
